# xmobar_config

./: .gitignore  README.md  cabal.project  my-xmobar.cabal  rebuild.sh  xmobar.hs
