cabal-version:       2.2
Name:                my-xmobar
version:             0.1.0.0
build-type:          Simple

common common-all
  cpp-options: -DIWLIB -DALSA

executable xmobar-x86_64-linux
  import: common-all
  main-is:             xmobar.hs
  other-modules:
  build-depends:       base
                      , xmobar
  hs-source-dirs:    .
  default-language:  Haskell2010
  ghc-options:        -Wall -Werror -fno-warn-missing-signatures -threaded
